k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learning-hub-deployment
  labels:
    app: learning-hub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: learning-hub
  template:
    metadata:
      labels:
        app: learning-hub
    spec:
      containers:
      - name: learning-hub-container
        image: nmgregorio/learning-hub:latest  # Change to your-dockerhub-username/learning-hub:latest if using Docker Hub
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
